// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout scaffolds any other page 1`] = `
<div
  className="container"
>
  <header
    className="header"
  >
    <a>
      <img
        alt="The Manurepo"
        className="headerImage"
        src="/images/repo.svg"
      />
    </a>
    <h2
      className="headingLg"
    >
      <a
        className="colorInherit"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        The Manurepo
      </a>
    </h2>
  </header>
  <main />
  <div
    className="backToHome"
  >
    <a
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      ← Back to home
    </a>
  </div>
</div>
`;

exports[`Layout scaffolds the home page 1`] = `
<div
  className="container"
>
  <header
    className="header"
  >
    <img
      alt="The Manurepo"
      className="headerHomeImage"
      src="/images/repo.svg"
    />
    <h1
      className="heading2Xl"
    >
      The Manurepo
    </h1>
  </header>
  <main />
</div>
`;
